--- a/DevelopmentCase/Views/Customers/Details.cshtml
+++ b/DevelopmentCase/Views/Customers/Details.cshtml
@@ -20,7 +20,10 @@
             @Html.DisplayNameFor(model => model.Coutryid)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Coutryid)
+           
+                @ViewBag.selectedcountry
+
+          
         </dd>
     </dl>
 </div>
